2012-02-28  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the function
	`twittering-current-timeline-referring-id-table'. There was the
	possibility that the function returns nil for a composite timeline
	spec. This made native retweets disappear on the composite
	timeline. Thanks to Boots_of_Lead who reported the bug.
	(twittering-current-timeline-referring-id-table): for a composite
	timeline spec, return the table of the first primary base spec
	with a non-nil referring table. This function previously returned
	the first direct base timeline spec, which might be nil.

	* twittering-mode.el: Add an explanation to the docstring of
	`twittering-new-tweets-rendered-hook'.
	(twittering-new-tweets-rendered-hook): add an explanation to the
	docstring.

	* twittering-mode.el: Reimplement jojo-mode as a hook.
	(twittering-add-statuses-to-timeline-data): remove statements for
	jojo-mode.
	(twittering-initialize-global-variables-if-necessary): add
	`twittering-jojo-mode-hook-function' to the new tweets rendered
	hook.
	(twittering-jojo-mode-p): removed.
	(twittering-update-jojo): removed.
	(twittering-post-predicted-message-like-jojo): new function.
	(twittering-jojo-mode-hook-function): new function.

	* twittering-mode.el: Display the replied tweet on the pop-up
	edit buffer.
	(twittering-edit-set-help-string): new function.
	(twittering-edit-setup-help): add a new argument REPLY-TO-ID.
	(twittering-update-status-from-pop-up-buffer): send REPLY-TO-ID to
	the function `twittering-edit-setup-help'.

	* twittering-mode.el: Generate a description of a edited tweet by
	`twittering-generate-format-status-function'.
	(twittering-edit-set-help-string): do not add a text property to
	STR.
	(twittering-edit-setup-help): generate a description by
	`twittering-generate-format-status-function'.

	* twittering-mode.el: Render a help on a pop-up edit buffer as a
	read-only text. The replied tweet can be copied on the edit