@@ -231,6 +231,7 @@
   bufferからtweetを消去するタイミングを`destroy-status' APIが成功した
   という応答を受け取った後に変更しました。APIが失敗に終わった場合、
   対象tweetはbufferに残っているので再度削除を試みることができます。
+* search timeline spec内の検索文字列のエスケープを修正
 
  2.0.0: 2011-04-22
 ------------------
